--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <div class="search-box">
             <a href="#"><h1>MovieDB Api</h1></a>
             <form id="search-form">
-                <input type="text" id="search-input" placeholder="Search a Movie here">
-                <button type="submit" class="search-btn">Search</button>
+                <input type="text" id="search-input" placeholder="Pesquise um filme aqui">
+                <button type="submit" class="search-btn">Pesquisar</button>
             </form>
         </div>
         <div id="result"></div>
